--- a/site/index.html
+++ b/site/index.html
@@ -76,11 +76,8 @@
   </div>
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script>
-    window.SUPABASE_URL = "https://pxagmkwtmolvhdmryepv.supabase.co";
-    window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB4YWdta3d0bW9sdmhkbXJ5ZXB2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAwMzk4NzEsImV4cCI6MjA3NTYxNTg3MX0.t--8DvvuPSkI4qD1HyufnDlTdM6c_GO7T_UXtj5CErw";
-  </script>
 
+  <script src="env.js"></script>
   <script src="app.js"></script>
 </body>
 
